examples/test/testpolicy8553.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8553
  namespace: namespace47
spec:
  podSelector:
    matchLabels:
      key11: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value10
          key10: value34
          key18: value9
      podSelector:
        matchLabels:
          key17: value35
          key31: value18
          key38: value49
